welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:4: error: ')' expected but ';' found.
  retourLigne(3;2);faireFleur(Color.PINK);accelere(3);
               ^FlowerPot:4: error: ';' expected but ')' found.
  retourLigne(3;2);faireFleur(Color.PINK);accelere(3);
                 ^